# fornix

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/agent/: engine.rs  error.rs  mod.rs  policy.rs  token_budget.rs  traits.rs  types.rs
src/bm25/: adapter.rs  config.rs  error.rs  mod.rs  result.rs  scorer.rs  tokenizer.rs
src/bm25/adapters/: memory.rs  mod.rs  postgres.rs
src/cache/: adapter.rs  config.rs  error.rs  key.rs  mod.rs  stats.rs
src/cache/adapters/: memory.rs  mod.rs  null.rs  postgres.rs  redis.rs
src/common/: metadata.rs  mod.rs  namespace.rs  pagination.rs  prelude.rs  value.rs
src/diff/: error.rs  mod.rs  snippet.rs
src/graph/: adapter.rs  chain_confidence.rs  community.rs  config.rs  error.rs  mod.rs  schema.rs  types.rs
src/graph/adapters/: memory.rs  memory_tests.rs  mod.rs  postgres.rs
src/graphrag/: config.rs  error.rs  mod.rs  schema.rs  types.rs
src/graphrag/search/: mod.rs
src/hybrid/: confidence.rs  config.rs  error.rs  mod.rs  normalizer.rs  result.rs  search.rs
src/hybrid/fusion/: linear.rs  mod.rs  rrf.rs
src/ontology/: alignment.rs  config.rs  error.rs  mod.rs  prompt.rs  registry.rs  types.rs  validator.rs
src/rag/: error.rs  evaluation.rs  mod.rs  query_gap_tracker.rs  tokenizer.rs  types.rs
src/rag/chunkers/: fixed_length.rs  mod.rs  parent_child.rs  sentence_token.rs  token_count.rs
src/rag/output_filter/: mod.rs
src/rag/rerankers/: mod.rs  null.rs
src/router/: error.rs  mod.rs  types.rs
src/router/forest/: forest_impl.rs  mod.rs  tree.rs
src/router/metrics/: calculator.rs  collector.rs  mod.rs
src/router/strategies/: embedding_threshold.rs  mod.rs  regex.rs  rorf.rs  round_robin.rs  weighted_random.rs
src/store/: adapter.rs  config.rs  error.rs  health.rs  mod.rs
src/tuner/: error.rs  mod.rs  primitives.rs  types.rs
src/tuner/strategies/: gepa.rs  mipro_v2.rs  mod.rs  noop.rs
src/vector/: adapter.rs  analysis.rs  config.rs  error.rs  filter.rs  mod.rs  result.rs
src/vector/adapters/: memory.rs  mod.rs  pgvector.rs  qdrant.rs
