[package]
name = "fornix"
version = "0.1.0"
edition = "2024"
description = "Knowledge storage, retrieval, and graph infrastructure for cognitive systems"
license = "MIT"
repository = "https://github.com/afstanton/fornix"

[features]
default = []

# Enable all modules at once (useful for development/testing)
full = [
    "store", "cache", "vector", "bm25", "hybrid",
    "graph", "graphrag", "rag", "router", "diff", "tuner", "agent"
]

# Individual modules — dependency graph mirrors the architectural layering
store    = []
cache    = ["store"]
vector   = ["store"]
bm25     = ["store"]
hybrid   = ["vector", "bm25"]
graph    = ["store"]
rag      = ["hybrid"]
graphrag = ["graph", "rag", "hybrid"]
router   = ["cache"]
diff     = []
tuner    = ["rag"]
agent    = ["router"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"], optional = false }
async-trait = "0.1"

# Error handling
thiserror = "2"

# Serialisation — used for entity/metadata properties throughout
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Lazy statics — used by Ruby shim crates for the Tokio runtime singleton
once_cell = "1"

# Hashing — used by CacheKey
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"

# Graph algorithms — shortest path, connected components, DFS/BFS
petgraph = "0.6"

# Concurrent HashMap — used by memory graph/vector adapters
dashmap = "6"

# UUID generation for stable record identifiers
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
